src/main/java/org/intellij/sdk/language/Xua.bnf
{
  parserClass="org.intellij.sdk.language.parser.XuaParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Xua"
  psiImplClassSuffix="Impl"
  psiPackage="org.intellij.sdk.language.psi"
  psiImplPackage="org.intellij.sdk.language.psi.impl"

  elementTypeHolderClass="org.intellij.sdk.language.psi.XuaTypes"
  elementTypeClass="org.intellij.sdk.language.psi.XuaElementType"
  tokenTypeClass="org.intellij.sdk.language.psi.XuaTokenType"

  psiImplUtilClass="org.intellij.sdk.language.psi.impl.XuaPsiImplUtil"
}
                  XuaFile ::= ConstantBlock+
                            | SuperBlock
                            | MethodBlock
                            | EntityBlock
               SuperBlock ::= SUPER '(' ( SYMBOL ':' Expression ['=' Expression] ';')* ')' '{' VALIDATION ':' Expression CRITERIA ':' Expression '}'
            ConstantBlock ::= SYMBOL '=' Expression;
              MethodBlock ::= METHOD '{' REQUEST ':' Expression RESPONSE ':' Expression BODY ':' Expression '}'
              EntityBlock ::= ENTITY '{' FIELDS ':' Expression '}'

               Expression ::= SYMBOL
                            | LITERAL '{' ( LANGUAGE_CODE ':' STRING_CONSTANT ';' )* '}'
                            | '{%' PHP_CODE '%}'
                            | SYMBOL '(' (SYMBOL '=' Expression ';')* ')'
                            | '(' Expression ')'
                            | Expression '|' Expression
                            | Expression '&' Expression
                            | '!' Expression
                            | NumericConstant
                            | Expression '+' Expression
                            | Expression '-' Expression
                            | Expression '*' Expression
                            | Expression '/' Expression
                            | '+' Expression
                            | '-' Expression
                            | ObjectConstant
                            | MapConstant
                            | ListConstant
                            | STRING_CONSTANT
                            | TRUE
                            | FALSE
                            | NULL
          NumericConstant ::= BIN_CONSTANT
                            | OCT_CONSTANT
                            | DEC_CONSTANT
                            | HEX_CONSTANT
             ListConstant ::= '[' (Expression ';')* ']'
              MapConstant ::= '[' (Expression '=>' Expression ';')* ']'
           ObjectConstant ::= '{' (Expression '=>' Expression ';')* '}'
